--- a/frontend/src/styles/ModalNewProject.css
+++ b/frontend/src/styles/ModalNewProject.css
@@ -175,7 +175,7 @@
 input,
 select,
 textarea {
-    padding: 0.8rem 1.2rem;
+    padding: 0rem 1.2rem;
     height: 4.8rem;
     border-radius: 6px;
     border: 1px solid var(--gray-light-color);
@@ -186,6 +186,7 @@ textarea {
     outline: none;
     box-sizing: border-box;
     transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+    line-height: 100px
 }
 
 input:focus,
@@ -393,6 +394,10 @@ body.dark-theme .type-options .selected {
     font-size: 1.2rem;
     color: var(--gray-dark-color);
     margin-top: 0.5rem;
+}
+
+body.dark-theme .char-counter-footer {
+    color: var(--black-color); 
 }
 
 .navigation-buttons {
